Reworked double to long conversion